--- a/style.css
+++ b/style.css
@@ -175,69 +175,6 @@ h6,
   background: #ee7843;
 }
 
-.navbar .dropdown ul {
-  display: block;
-  position: absolute;
-  left: 14px;
-  top: calc(100% + 30px);
-  margin: 0;
-  padding: 10px 0;
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: 0.3s;
-}
-
-.navbar .dropdown ul li {
-  min-width: 200px;
-}
-
-.navbar .dropdown ul a {
-  padding: 10px 20px;
-  font-size: 15px;
-  text-transform: none;
-}
-
-.navbar .dropdown ul a i {
-  font-size: 12px;
-}
-
-.navbar .dropdown ul a:hover,
-.navbar .dropdown ul .active:hover,
-.navbar .dropdown ul li:hover>a {
-  color: #eb5d1e;
-}
-
-.navbar .dropdown:hover>ul {
-  opacity: 1;
-  top: 100%;
-  visibility: visible;
-}
-
-.navbar .dropdown .dropdown ul {
-  top: 0;
-  left: calc(100% - 30px);
-  visibility: hidden;
-}
-
-.navbar .dropdown .dropdown:hover>ul {
-  opacity: 1;
-  top: 0;
-  left: 100%;
-  visibility: visible;
-}
-
-@media (max-width: 1366px) {
-  .navbar .dropdown .dropdown ul {
-    left: -90%;
-  }
-
-  .navbar .dropdown .dropdown:hover>ul {
-    left: -100%;
-  }
-}
 
 /**
 * Mobile Navigation 
@@ -313,39 +250,6 @@ h6,
   margin: 15px;
 }
 
-.navbar-mobile .dropdown ul {
-  position: static;
-  display: none;
-  margin: 10px 20px;
-  padding: 10px 0;
-  z-index: 99;
-  opacity: 1;
-  visibility: visible;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-}
-
-.navbar-mobile .dropdown ul li {
-  min-width: 200px;
-}
-
-.navbar-mobile .dropdown ul a {
-  padding: 10px 20px;
-}
-
-.navbar-mobile .dropdown ul a i {
-  font-size: 12px;
-}
-
-.navbar-mobile .dropdown ul a:hover,
-.navbar-mobile .dropdown ul .active:hover,
-.navbar-mobile .dropdown ul li:hover>a {
-  color: #eb5d1e;
-}
-
-.navbar-mobile .dropdown>.dropdown-active {
-  display: block;
-}
 
 /*--------------------------------------------------------------
 # Hero Section
@@ -369,7 +273,7 @@ h6,
 #hero h2 {
   color: #a08f86;
   margin: 15px 0 0 0;
-  font-size: 24px;
+  font-size: 30px;
 }
 
 #hero .btn-get-started {
@@ -632,10 +536,41 @@ section {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+.portfolio .icon-box{
+  padding: 30px;
+  position: relative;
+  overflow: hidden;
+  margin: 0 0 10px 0;
+  background: #fff;
+  box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
+  transition: all 0.3s ease-in-out;
+  border-radius: 15px;
+  text-align: center;
+  border-bottom: 3px solid #fff;
+  font-size: medium;
+}
 .portfolio .portfolio-item {
   margin-bottom: 30px;
 }
 
+@media (min-width: 992px) {
+  .portfolio .col-lg-6 {
+    flex: 0 0 auto;
+    width: 20%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .portfolio .h3, h3 {
+    font-size: 1.2rem;
+  }
+}
+.portfolio .col-lg-12 {
+  flex: 0 0 auto;
+  width: 100%;
+  text-align: center;
+  font-size: 1.65rem;
+}
 .portfolio #portfolio-flters {
   padding: 0;
   margin: 0 0 35px 0;
@@ -659,6 +594,10 @@ section {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
   color: #eb5d1e;
+}
+.portfolio .icon-box:hover {
+  transform: translateY(-5px);
+  border-color: #ef7f4d;
 }
 
 .portfolio #portfolio-flters li:last-child {
