changed some css

--- a/style.css
+++ b/style.css
@@ -531,6 +531,7 @@ section {
   font-size: 15px;
   line-height: 28px;
   margin-bottom: 0;
+  color: #000000;
 }
 
 /*--------------------------------------------------------------
