--- a/style.css
+++ b/style.css
@@ -378,7 +378,7 @@ section {
   padding-bottom: 0;
   line-height: 1px;
   margin-bottom: 15px;
-  color: #c2b7b1;
+  color:#4e4039 ;
 }
 
 .section-title p {
@@ -387,7 +387,7 @@ section {
   position: relative;
   font-size: 20px;
   font-weight: 700;
-  color: #4e4039;
+  color: #a89d97;
 }
 
 .section-title p::after {
