--- a/style.css
+++ b/style.css
@@ -446,6 +446,23 @@ section {
 #results h2 {
   text-align: center;
 }
+#results .image-container {
+  display: flex;
+  flex-direction: row; 
+  align-items: center;
+  gap: 20px; /* Adjust the gap as needed */
+}
+#results figcaption {
+  text-align: center;
+  /* background-color: #fef8f5; */
+}
+
+#results .figure-image {
+  max-width: 100%;  /* Images will take up the full width of the figure container */
+  height: auto; /* Maintain the aspect ratio */
+  border: 2px solid black;
+  display: block; /* Ensure images don't have any extra spacing issues */
+}
 
 /* Style for the #conclusions section */
 #conclusions {
